--- a/countries.client/package.json
+++ b/countries.client/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "sass": "^1.77.2",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
