--- a/countries.client/package.json
+++ b/countries.client/package.json
@@ -12,7 +12,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "codegen": "^0.1.0",
     "sass": "^1.77.2",
+    "swagger-axios-codegen": "^0.16.14",
     "vue": "^3.4.21",
     "vuex": "^4.1.0"
   },
