--- a/Countries.Server/appsettings.json
+++ b/Countries.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MongoDB": "mongodb+srv://huyphan2210:{password}@cluster0.pkbt0hh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+  }
 }
