--- a/countries.client/package.json
+++ b/countries.client/package.json
@@ -12,8 +12,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.5",
     "axios": "^1.7.2",
     "codegen": "^0.1.0",
+    "lodash": "^4.17.21",
     "sass": "^1.77.2",
     "swagger-axios-codegen": "^0.16.14",
     "vue": "^3.4.21",
